Fixed styles and added images

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,43 +3,49 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .products {
-    table {
-        border-collapse: collapse;
+  table {
+    border-collapse: collapse;
+  }
+
+  table tr td {
+    padding: 5px;
+    vertical-align: top;
+  }
+
+  .list_image {
+    width:  60px;
+    height: 70px;
+  }
+
+  .list_description {
+    width: 60%;
+
+    dl {
+      margin: 0;
     }
 
-    table tr td {
-        padding: 5px;
-        vertical-align: top;
+    dt {
+      color:        #244;
+      font-weight:  bold;
+      font-size:    larger;
     }
 
-    .list-image {
-        width: 60px;
-        height: 70px;
+    dd {
+      margin: 0;
     }
+  }
 
-    .list-description {
-        width: 60%;
+  .list_actions {
+    font-size:    x-small;
+    text-align:   right;
+    padding-left: 1em;
+  }
 
-        dl {
-            margin: 0;
-        }
+  .list_line_even {
+    background:   #e0f8f8;
+  }
 
-        dd {
-            margin: 0;
-        }
-    }
-
-    .list-actions {
-        font-size: x-small;
-        text-align: right;
-        padding-left: 1em;
-    }
-
-    .list-line-even {
-        background: #e0f8f8;
-    }
-
-    .list-line-odd {
-        background: #f8b0f8;
-    }
+  .list_line_odd {
+    background:   #f8b0f8;
+  }
 }
