--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
     </div>
     <div id="columns">
       <div id="side">
+        <div id="cart">
+          <% if @cart %>
+            <%= render @cart %>
+          <% end %>
+        </div>
+
         <ul>
           <li><%= link_to 'Home', store_index_path %></li>
           <li><a href="http://www..../faq">Questions</a></li>
