--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,3 @@
 $('#cart').html("<%=j render(@cart) %>");
 
-$('#current_item').css({'background-colour':'#88ff88'}).animate({'background-color'​:​'#114411'}, 1000);
+$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#114411'}, 1000);
